--- a/nn/pyproject.toml
+++ b/nn/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["shest <shestopalovegor@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+torch = "1.12.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
