--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,11 @@ repos:
   hooks:
     - id: pycln
       args: [ --all ]
+- repo: https://github.com/psf/black
+  rev: 22.6.0
+  hooks:
+  - id: black
+    args: [ -l 88]
 - repo: https://github.com/charliermarsh/ruff-pre-commit
   rev: 'v0.0.237'
   hooks:
