--- a/nn/pyproject.toml
+++ b/nn/pyproject.toml
@@ -2,7 +2,7 @@
 name = "nn"
 version = "0.1.0"
 description = "Package for russian car licence plate recognition"
-authors = ["shest <shestopalovegor@gmail.com>"]
+authors = ["shest"]
 
 [tool.poetry.dependencies]
 python = "3.9"
