--- a/nn/pyproject.toml
+++ b/nn/pyproject.toml
@@ -5,7 +5,7 @@ description = "Package for russian car licence plate recognition"
 authors = ["shest"]
 
 [tool.poetry.dependencies]
-python = "3.9"
+python = "^3.9"
 opencv-python-headless = "^4.7.0"
 pandas = "^1.5.3"
 Pillow = "^9.4.0"
