--- a/nn/pyproject.toml
+++ b/nn/pyproject.toml
@@ -20,6 +20,7 @@ pydantic = "^1.10.4"
 torch = "^1.13.1"
 torchvision = "^0.14.1"
 pillow = "^9.4.0"
+pyyaml = "^6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
