--- a/inference_triton/pyproject.toml
+++ b/inference_triton/pyproject.toml
@@ -11,6 +11,7 @@ nn = {path = "../nn", develop = true}
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.0.4"
 pytest = "^7.2.1"
+tritonclient = {extras = ["all"], version = "^2.30.0"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
