--- a/inference_torchserve/pyproject.toml
+++ b/inference_torchserve/pyproject.toml
@@ -9,11 +9,15 @@ packages = [{include = "inference_torchserve"}]
 [tool.poetry.dependencies]
 python = "~3.8"
 nn = {path = "../nn", develop = true}
+torchserve = "0.7.1"
+pydantic = "^1.10.5"
 
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.0.4"
 pytest = "^7.2.1"
+torch-model-archiver = "^0.7.1"
+debugpy = "^1.6.6"
 
 [build-system]
 requires = ["poetry-core"]
