--- a/inference_torchserve/inference_torchserve/config.properties
+++ b/inference_torchserve/inference_torchserve/config.properties
@@ -1,3 +1,4 @@
+model_store=inference_torchserve/model_store/
 inference_address=http://0.0.0.0:8080
 management_address=http://0.0.0.0:8081
 metrics_address=http://0.0.0.0:8082
