--- a/inference_torchserve/pyproject.toml
+++ b/inference_torchserve/pyproject.toml
@@ -11,6 +11,7 @@ python = "~3.8"
 nn = {path = "../nn", develop = true}
 torchserve = "0.7.1"
 pydantic = "^1.10.5"
+typed-argument-parser = "^1.8.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -18,6 +19,7 @@ pre-commit = "^3.0.4"
 pytest = "^7.2.1"
 torch-model-archiver = "^0.7.1"
 debugpy = "^1.6.6"
+torch-workflow-archiver = "^0.2.7"
 
 [build-system]
 requires = ["poetry-core"]
