Fixed no cuda bug

--- a/inference_torchserve/docker/common.yml
+++ b/inference_torchserve/docker/common.yml
@@ -8,3 +8,10 @@ services:
       - 8080:8080
       - 8081:8081
       - 8082:8082
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
