--- a/inference_triton/docker/prod.yml
+++ b/inference_triton/docker/prod.yml
@@ -10,3 +10,10 @@ services:
     ports:
       - 8000:8000
     shm_size: '1gb'
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
