--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,9 +2,11 @@ repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v2.3.0
   hooks:
-  -   id: check-yaml
-  -   id: end-of-file-fixer
-  -   id: trailing-whitespace
+    - id: check-yaml
+    - id: end-of-file-fixer
+    - id: trailing-whitespace
+    - id: file-contents-sorter
+      files: requirements.in
 - repo: https://github.com/hadialqattan/pycln
   rev: v2.1.1
   hooks:
